feat(Basic files added to the repository)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,13 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "prettier"
+    ],
+    "plugins": [
+        "prettier"
+    ],
     "overrides": [
     ],
     "parserOptions": {
@@ -11,5 +17,6 @@
         "sourceType": "module"
     },
     "rules": {
+        "prettier/prettier": "error"
     }
 }
